# PMonkey

./: .gitignore  README.md  pyproject.toml
docs/: ios_tidevice3_implementation.md
examples/: android_test.yaml  android_with_exclusions.yaml  ios_test.yaml
src/play_monkey/: __main__.py  cli.py
src/play_monkey/config/: models.py  validator.py
src/play_monkey/core/: bounds.py  events.py  scheduler.py
src/play_monkey/devices/: adb_protocol.py  android.py  base.py  factory.py  ios.py  ios_backend.py  minitouch.py
src/play_monkey/monitoring/: android_monitor.py  base.py  ios_monitor.py  metrics.py
src/play_monkey/reporting/: charts.py  generator.py  statistics.py
src/play_monkey/reporting/templates/: report.html
src/play_monkey/stability/: android_monitor.py  base.py  ios_monitor.py  models.py  recovery.py
tests/integration/: test_android.py  test_ios.py
tests/unit/: test_config.py  test_events.py  test_minitouch.py
