[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "play-monkey"
version = "0.1.0"
description = "Cross-platform mobile monkey testing tool with performance and stability monitoring"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Play Monkey Team"}
]
keywords = ["monkey-testing", "mobile-testing", "android", "ios", "performance", "stability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "click>=8.0",
    "pyyaml>=6.0",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "jinja2>=3.0.1",
    "pymobiledevice3>=2.0",
    "rich>=13.0",
    "adb-shell>=0.4.4",
    "tidevice==0.9.7",
    "setuptools==69.5.1",
    "solox>=2.9.0",
    "facebook-wda>=1.5.0",
    "requests>=2.33.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.7",
]

[project.scripts]
play-monkey = "play_monkey.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=play_monkey --cov-report=html --cov-report=term"
